--- a/.env.local
+++ b/.env.local
@@ -6,6 +6,7 @@ NEXT_PUBLIC_HOST="localhost"
 NEXT_PUBLIC_URL="http://localhost:3000"
 NEXT_PUBLIC_IMAGE_URL="https://images.escape-note.com"
 NEXT_PUBLIC_API="http://localhost:8000"
+# NEXT_PUBLIC_API="https://api.escape-note.com"
 
 # KEYS
 NEXT_PUBLIC_SENTRY_DSN=""
