feat: 네이버 웹 마스터도구 연동

--- a/.env.local
+++ b/.env.local
@@ -11,5 +11,4 @@ NEXT_PUBLIC_API="http://localhost:8000"
 # KEYS
 NEXT_PUBLIC_SENTRY_DSN=""
 NEXT_PUBLIC_GA_TRACKING_ID="G-HXW9PYR0K4"
-NEXT_PUBLIC_AMPLITUDE_API_KEY=""
-NEXT_PUBLIC_GOOGLE_MAP=""
+NEXT_PUBLIC_NAVER_SITE_VERIFICATION="d79812499a4701a806f19bb9fd3a4b7f996b5007"
