--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-sitemap": "^3.1.30",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-modal-sheet": "^1.5.1",
     "react-redux": "^7.2.8",
     "react-responsive": "^9.0.0",
     "redux-persist": "^6.0.0",
