feat: 지역 정적 데이터를 받아와서 처리

--- a/.env.local
+++ b/.env.local
@@ -5,6 +5,7 @@ NEXT_PUBLIC_HOST="localhost"
 # URLS
 NEXT_PUBLIC_URL="http://localhost:3000"
 NEXT_PUBLIC_IMAGE_URL="https://images.escape-note.com"
+NEXT_PUBLIC_STATIC_URL="https://static.escape-note.com"
 NEXT_PUBLIC_API="http://localhost:8000"
 # NEXT_PUBLIC_API="https://api.escape-note.com"
 
