--- a/.env.production
+++ b/.env.production
@@ -5,6 +5,7 @@ NEXT_PUBLIC_HOST=".escape-note.com"
 # URLS
 NEXT_PUBLIC_URL="https://escape-note.com"
 NEXT_PUBLIC_IMAGE_URL="https://images.escape-note.com"
+NEXT_PUBLIC_STATIC_URL="https://static.escape-note.com"
 NEXT_PUBLIC_API="https://api.escape-note.com"
 
 # KEYS
