--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "next-images": "^1.8.4",
     "next-redux-wrapper": "^7.0.5",
     "next-sitemap": "^3.1.30",
+    "pica": "^9.0.1",
     "react": "^17.0.0",
+    "react-cropper": "^2.1.8",
     "react-dom": "^17.0.0",
     "react-modal-sheet": "^1.5.1",
     "react-redux": "^7.2.8",
@@ -41,6 +43,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.46",
+    "@types/pica": "^9.0.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.24",
