--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
+    "js-cookie": "^3.0.5",
     "next": "^12.2.3",
     "next-images": "^1.8.4",
     "next-redux-wrapper": "^7.0.5",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@types/jest": "^27.5.2",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^16.11.46",
     "@types/pica": "^9.0.1",
     "@types/react": "^17.0.0",
