--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "이스케이프노트",
   "short_name": "이스케이프노트",
-  "description": "방탈출에 대한 모든 것",
+  "name": "이스케이프노트 - 방탈출에 대한 모든 것",
+  "description": "방탈출 카페와 테마를 추천하고 기록을 관리하며, 방탈출 애호가들과 소통할 수 있는 커뮤니티 플랫폼입니다.",
   "start_url": "/?utm_source=a2hs",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -10,38 +10,39 @@
     {
       "src": "icons/android-icon-36x36.png",
       "sizes": "36x36",
-      "type": "image/png",
-      "density": "0.75"
+      "type": "image/png"
     },
     {
       "src": "icons/android-icon-48x48.png",
       "sizes": "48x48",
-      "type": "image/png",
-      "density": "1.0"
+      "type": "image/png"
     },
     {
       "src": "icons/android-icon-72x72.png",
       "sizes": "72x72",
-      "type": "image/png",
-      "density": "1.5"
+      "type": "image/png"
     },
     {
       "src": "icons/android-icon-96x96.png",
       "sizes": "96x96",
-      "type": "image/png",
-      "density": "2.0"
+      "type": "image/png"
     },
     {
       "src": "icons/android-icon-144x144.png",
       "sizes": "144x144",
-      "type": "image/png",
-      "density": "3.0"
+      "type": "image/png"
     },
     {
       "src": "icons/android-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "density": "4.0"
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
