--- a/.env.local
+++ b/.env.local
@@ -10,8 +10,7 @@ NEXT_PUBLIC_API="http://localhost:8000"
 # NEXT_PUBLIC_API="https://api.escape-note.com"
 
 # KEYS
-NEXT_PUBLIC_SENTRY_DSN=""
-NEXT_PUBLIC_GA_TRACKING_ID="G-HXW9PYR0K4"
-NEXT_PUBLIC_NAVER_SITE_VERIFICATION="d79812499a4701a806f19bb9fd3a4b7f996b5007"
+NEXT_PUBLIC_GA_TRACKING_ID=""
+NEXT_PUBLIC_NAVER_SITE_VERIFICATION=""
 NEXT_PUBLIC_NAVER_MAP="w5byxw3a6l"
-NEXT_PUBLIC_GOOGLE_ADSENSE="ca-pub-4581519768357622"
+NEXT_PUBLIC_GOOGLE_ADSENSE=""
