--- a/package.json
+++ b/package.json
@@ -21,22 +21,23 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@reduxjs/toolkit": "^1.8.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.0.10",
-    "axios": "^0.27.2",
+    "axios": "^1.5.0",
+    "cookies-next": "^4.1.0",
     "date-fns": "^2.29.3",
     "js-cookie": "^3.0.5",
     "next": "^12.2.3",
     "next-images": "^1.8.4",
     "next-pwa": "^5.6.0",
-    "next-redux-wrapper": "^7.0.5",
+    "next-redux-wrapper": "^8.1.0",
     "next-sitemap": "^3.1.30",
     "pica": "^9.0.1",
     "react": "^17.0.0",
     "react-cropper": "^2.1.8",
     "react-dom": "^17.0.0",
     "react-modal-sheet": "^1.5.1",
-    "react-redux": "^7.2.8",
+    "react-redux": "^8.1.2",
     "react-responsive": "^9.0.0",
     "styled-system": "^5.1.5",
     "yup": "^0.32.11"
