--- a/.env.local
+++ b/.env.local
@@ -11,6 +11,6 @@ NEXT_PUBLIC_API="http://localhost:8000"
 
 # KEYS
 NEXT_PUBLIC_GA_TRACKING_ID=""
-NEXT_PUBLIC_NAVER_SITE_VERIFICATION=""
+NEXT_PUBLIC_NAVER_SITE_VERIFICATION="d79812499a4701a806f19bb9fd3a4b7f996b5007"
 NEXT_PUBLIC_NAVER_MAP="w5byxw3a6l"
-NEXT_PUBLIC_GOOGLE_ADSENSE=""
+NEXT_PUBLIC_GOOGLE_ADSENSE="ca-pub-4581519768357622"
